# ByteConverter

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Google_tests/: CMakeLists.txt  convert_test.cpp  convert_test.h
Google_tests/lib/googletest-main/: .gitignore
Google_tests/lib/googletest-main/.github/workflows/: gtest-ci.yml
Google_tests/lib/googletest-main/ci/: linux-presubmit.sh
Google_tests/lib/googletest-main/docs/: advanced.md  faq.md  gmock_cook_book.md  primer.md
Google_tests/lib/googletest-main/docs/reference/: testing.md
Google_tests/lib/googletest-main/googlemock/: CMakeLists.txt
Google_tests/lib/googletest-main/googlemock/include/gmock/: gmock-actions.h  gmock-matchers.h  gmock-more-matchers.h  gmock-spec-builders.h
Google_tests/lib/googletest-main/googlemock/src/: gmock-all.cc  gmock-spec-builders.cc
Google_tests/lib/googletest-main/googlemock/test/: gmock-actions_test.cc  gmock-matchers-arithmetic_test.cc  gmock-matchers-comparisons_test.cc  gmock-matchers-containers_test.cc  gmock-matchers-misc_test.cc  gmock-matchers_test.h  gmock-port_test.cc  gmock-pp_test.cc  gmock-spec-builders_test.cc  gmock_all_test.cc  gmock_ex_test.cc  gmock_leak_test.py  gmock_leak_test_.cc  gmock_link_test.h  gmock_output_test.py  gmock_stress_test.cc  gmock_test_utils.py
Google_tests/lib/googletest-main/googletest/: CMakeLists.txt
Google_tests/lib/googletest-main/googletest/cmake/: internal_utils.cmake
Google_tests/lib/googletest-main/googletest/samples/: sample10_unittest.cc  sample1_unittest.cc  sample2_unittest.cc  sample3_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc  sample9_unittest.cc
Google_tests/lib/googletest-main/googletest/src/: gtest-all.cc  gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest-typed-test.cc  gtest.cc
Google_tests/lib/googletest-main/googletest/test/: googletest-break-on-failure-unittest.py  googletest-break-on-failure-unittest_.cc  googletest-catch-exceptions-test.py  googletest-catch-exceptions-test_.cc  googletest-color-test_.cc  googletest-death-test-test.cc  googletest-death-test_ex_test.cc  googletest-env-var-test.py  googletest-env-var-test_.cc  googletest-failfast-unittest.py  googletest-failfast-unittest_.cc  googletest-filepath-test.cc  googletest-filter-unittest.py  googletest-filter-unittest_.cc  googletest-global-environment-unittest.py  googletest-global-environment-unittest_.cc  googletest-json-outfiles-test.py  googletest-json-output-unittest.py  googletest-list-tests-unittest.py  googletest-list-tests-unittest_.cc  googletest-listener-test.cc  googletest-options-test.cc  googletest-output-test.py  googletest-output-test_.cc  googletest-param-test-invalid-name1-test.py  googletest-param-test-invalid-name2-test.py  googletest-param-test-test.cc  googletest-param-test-test.h  googletest-param-test2-test.cc  googletest-port-test.cc  googletest-printers-test.cc  googletest-shuffle-test.py  googletest-shuffle-test_.cc  googletest-test-part-test.cc  googletest-throw-on-failure-test_.cc  googletest-uninitialized-test_.cc  gtest-typed-test2_test.cc  gtest-typed-test_test.cc  gtest-typed-test_test.h  gtest-unittest-api_test.cc  (+27 more)
Test/: CMakeLists.txt  convert_test.cpp  convert_test.h
Utilities/: Utilities.cpp  (+1 more)
(+23 files in other folders)
